# odlot

./: .gitlab-ci.yml  CMakeLists.txt
data/: 1.flac  2.flac  3.flac  alarm.flac  bongo1.flac  bongo2.flac  bongo3.flac  bongo4.flac  bongo5.flac  bongobg.flac  but.flac  ciuchcia.flac  com.holypangolin.ODLOT.appdata.xml  domek.flac  gaska.flac  grzebien.flac  grzebienodlot.flac  grzebienrosnie.flac  logo.flac  myszki.flac  niepokoj.flac  odlot.desktop  odlot.flac  pac.flac  pienki.flac  przejscie.flac  przejscie2.flac  pudelko1.flac  pudelko2.flac  pudelko3.flac  rave.flac  rzeczka.flac  silence.flac  taniec.flac  wrona.flac
data/icons/: icon.rc  odlot.icns
data/shaders/: circular_gradient.glsl  grain.glsl  vertex.glsl
data/sprites/altanka/: altanka.ini
data/sprites/bgs/: bgs.ini
data/sprites/but/: blank.ini  but.ini  standby.ini
data/sprites/gaski/: przod1.ini  przod2.ini  tyl1.ini  tyl2.ini
data/sprites/grzebien/: grzebien_macha.ini  grzebien_rosnie.ini  grzebien_rosnie_skrzydelka.ini
data/sprites/niebieski/: niebieski_przod.ini  niebieski_tyl.ini
data/sprites/pienki/: mask.ini  pienki_myszka.ini
data/sprites/pudelko/: pudelko.ini  pudelko1.ini  pudelko2.ini  pudelko3.ini
data/sprites/rave/: niebieski_z_tlem.ini
data/sprites/rzeczka/: animacja_rzeka.ini
flatpak/: com.holypangolin.ODLOT.json
src/: CMakeLists.txt  common.c  common.h  main.c
src/gamestates/: altanka.c  bongo.c  but.c  ciuchcia.c  domek.c  dosowisko.c  gaski.c  intro.c  loading.c  logo.c  myszka.c  pienki.c  pudelko.c  rave.c  rzeczka.c  taniec.c  wrona.c
(+2 files in other folders)
